# labyrinth

./: .gitignore  AGENTS.md  Cargo.toml  FINAL_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_TESTS_SUMMARY.md  PROJECT_ANALYSIS.md  README.md  RELEASE_NOTES.md  TEST_VALIDATION_REPORT.md  build_release.sh  cert.pem  cert_b64.txt  key.pem
.cargo/: config.toml
assets/peas/: linpeas_fallback.sh  winpeas_fallback.ps1
benches/: streaming_benchmarks.rs
docs/: architecture.md  operations.md  usage.md
docs/reports/: FINAL_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_TESTS_SUMMARY.md  PROJECT_ANALYSIS.md  RELEASE_NOTES.md  TEST_VALIDATION_REPORT.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  protocol.rs  security.rs  styling.rs  transport.rs
src/agent/: command_executor.rs  connection.rs  core.rs  evasion.rs  mod.rs  pty_shell.rs  reverse_port_forward.rs  streaming_manager.rs  system_info.rs  tls_config.rs
src/server/: agent_connection.rs  agent_manager.rs  certificate.rs  chain_manager.rs  core.rs  dashboard.rs  dweller_manager.rs  dweller_registry.rs  mod.rs  netstack_bridge.rs  netstack_bridge_windows.rs  network_map.rs  privileges.rs  quic_stream_bridge.rs  topology.rs  tunnel_manager.rs  ui.rs
src/streaming/: connection_manager.rs  errors.rs  metrics.rs  mod.rs  models.rs  recovery.rs  resource_manager.rs  stream_manager.rs  test_interfaces.rs  traits.rs
tests/: integration_streaming.rs  tier1_in_memory.rs
